RESOLVED FIXED65712
REGRESSION (91931) - Two LocalStorage threads started, thread unsafe operations can cause crash or other problems later.
https://bugs.webkit.org/show_bug.cgi?id=65712
Summary REGRESSION (91931) - Two LocalStorage threads started, thread unsafe operatio...
Brady Eidson
Reported 2011-08-04 12:53:14 PDT
REGRESSION (91931) - Two LocalStorage threads started, thread unsafe operations can cause crash or other problems later. This is as simple as a bool that's not set correctly before some potentially-thread-launching-operations begin. Patch coming. In radar as <rdar://problem/9882581> and <rdar://problem/8186793>
Attachments
Patch v1 - Set a bool before it's value will be needed, not after. (1.69 KB, patch)
2011-08-04 12:56 PDT, Brady Eidson
darin: review+
beidson: commit-queue-
Brady Eidson
Comment 1 2011-08-04 12:54:08 PDT
(In reply to comment #0) > In radar as <rdar://problem/9882581> and <rdar://problem/8186793> That's actually 9868015 instead of 8186793
Brady Eidson
Comment 2 2011-08-04 12:56:22 PDT
Created attachment 102962 [details] Patch v1 - Set a bool before it's value will be needed, not after.
Darin Adler
Comment 3 2011-08-04 12:57:29 PDT
Comment on attachment 102962 [details] Patch v1 - Set a bool before it's value will be needed, not after. Any way to do a regression test on this?
Brady Eidson
Comment 4 2011-08-04 13:14:01 PDT
(In reply to comment #3) > (From update of attachment 102962 [details]) > Any way to do a regression test on this? AFAIK it was seen precisely once in one of the local storage tests since I originally landed, so one could argue it's already "covered" That said, it's been quite elusive to reproduce even testing under the browser. It's only been seen a handful of times there. Very racy. I'm open to ideas but don't think it's worth holding up landing.
Brady Eidson
Comment 5 2011-08-04 13:14:50 PDT
Landed in r92406
Note You need to log in before you can comment on or make changes to this bug.