<rdar://problem/9882581>, <rdar://problem/9868015>, and https://bugs.webkit.org/show_bug.cgi?id=65712 REGRESSION (91931) - Two LocalStorage threads started, thread unsafe operations can cause crash or other problems later.

Reviewed by Darin Adler.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::internalInitialize): Set the "needs initialization" flag before doing a 
  whole bunch of stuff that might need to check it.



git-svn-id: svn://svn.chromium.org/blink/trunk@92406 bbb929c8-8fbe-4397-9dbb-9b2b20218538