third_party/WebKit/Source/WebCore/storage/StorageTracker.cpp
@@ -63,6 +63,8 @@ void StorageTracker::initializeTracker(const String& storagePath, StorageTracker
 
 void StorageTracker::internalInitialize()
 {
+    m_needsInitialization = false;
+
     ASSERT(isMainThread());
 
     // Make sure text encoding maps have been built on the main thread, as the StorageTracker thread might try to do it there instead.
@@ -73,8 +75,6 @@ void StorageTracker::internalInitialize()
     storageTracker->setIsActive(true);
     storageTracker->m_thread->start();  
     storageTracker->importOriginIdentifiers();
-    
-    m_needsInitialization = false;
 }
 
 StorageTracker& StorageTracker::tracker()
